# use-rag

./: db.py  extract.py  extract_csv.py  extract_excel.py  extract_json.py  extract_md.py  extract_pdf.py  extract_ppt.py  extract_word.py  extract_xml.py  llm.py  pyproject.toml  query.py  save.py  semantic_chunker.py
example_file/: example.csv  example.docx  example.json  example.xml  红楼梦.txt
extract-file/: exract_txt.py  extract_csv.py  extract_excel.py  extract_html.py  extract_json.py  extract_pdf.py  extract_word.py  extract_xml.py
