[project]
name = "use-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.3.6",
    "langchain-text-splitters>=1.1.0",
    "lxml>=6.0.2",
    "numpy>=2.3.5",
    "openai>=2.12.0",
    "openpyxl>=3.1.5",
    "pymupdf>=1.26.6",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "rank-bm25>=0.2.2",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.0",
]
